crates/lang/tests/ui/contract/fail/event-too-many-topics.stderr
error[E0277]: the trait bound `EventTopics<3_usize>: RespectTopicLimit<2_usize>` is not satisfied
  --> tests/ui/contract/fail/event-too-many-topics.rs:26:5
   |
26 |     pub struct Event {
   |     ^^^ the trait `RespectTopicLimit<2_usize>` is not implemented for `EventTopics<3_usize>`
   |
   = help: the following implementations were found:
             <EventTopics<3_usize> as RespectTopicLimit<10_usize>>
             <EventTopics<3_usize> as RespectTopicLimit<11_usize>>
             <EventTopics<3_usize> as RespectTopicLimit<12_usize>>
             <EventTopics<3_usize> as RespectTopicLimit<3_usize>>
           and 87 others
note: required by a bound in `EventRespectsTopicLimit`
  --> src/codegen/event/topics.rs
   |
   |     <Event as EventLenTopics>::LenTopics: RespectTopicLimit<LEN_MAX_TOPICS>,
   |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EventRespectsTopicLimit`
